# pantrie

./: .gitignore  2025-11-14-this-session-is-being-continued-from-a-previous-co.txt  404.html  CLAUDE.md  CNAME  DOCKER.md  FIXED.md  GETTING_STARTED.md  Jenkinsfile  README.md  TROUBLESHOOTING.md  build-docs.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  docs-requirements.txt  index.html  mkdocs.yml  sitemap.xml  sonar-project.properties
backend/: .env.example  2025-11-13-user-logins.txt  CONVERSATION_BACKUP_2025-11-14.md  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-entrypoint.dev.sh  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.py  test_login.py  test_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_categories_locations.py  002_add_users_households_inventory.py  003_add_household_id_to_locations.py  004_add_user_profile_fields.py  44323516db80_increase_avatar_url_size.py  6eff5d1d268f_add_site_role_to_users.py  7f8a9b0c1d2e_make_password_nullable_for_oauth.py  add_notification_settings_and_webhooks.py  b2c3d4e5f6a7_add_api_clients.py  c3d4e5f6a7b8_add_mealie_connections.py  cb580eb7c828_add_email_confirmation_and_system_.py  dba21d223bce_add_nutritional_info_to_inventory_items.py  dd8a9775b734_add_reverse_proxy_settings.py  e7f8g9h0i1j2_add_household_allergens.py  f1a2b3c4d5e6_add_household_staples.py
backend/src/: __init__.py  config.py  main.py
backend/src/core/: cache.py  dependencies.py  deps.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/src/db/: base.py  seed.py  session.py
backend/src/models/: __init__.py  api_client.py  category.py  household.py  household_allergen.py  household_membership.py  household_staple.py  inventory_item.py  location.py  mealie_connection.py  refresh_token.py  system_settings.py  user.py  webhook.py
backend/src/schemas/: allergen.py  api_client.py  household.py  inventory.py  location.py  mealie.py  setup.py  staple.py  user.py
backend/src/services/: allergen_service.py  api_client_service.py  auth_service.py  barcode_service.py  client_auth_service.py  email_service.py  household_service.py  ingredient_matching.py  inventory_service.py  location_service.py  mealie_client_service.py  mealie_connection_service.py  mealie_query_service.py  notification_service.py  oauth_service.py  setup_service.py  (+2 more)
backend/tests/: conftest.py  utils.py
(+271 files in other folders)
